--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Mad Skience</title>
-	<script src="js/app.js"></script>
-	<script src="js/phaser.js"></script>
+	<script src="js/phaser.js"></script>	
+	<script src="js/Preloader.js"></script>
+	<script src="js/Menu.js"></script>
+	<script src="js/Play.js"></script>
+	<script src="js/Game.js"></script>
 </head>
 <body>
 	<div id="content"></div>
