--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<script src="js/Preloader.js"></script>
 	<script src="js/Menu.js"></script>
 	<script src="js/Play.js"></script>
+	<script src="js/GameOver.js"></script>
 	<script src="js/Game.js"></script>
 </head>
 <body>
