Moar sounds, maybe finished

--- a/index.html
+++ b/index.html
@@ -3,6 +3,22 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Mad Skience</title>
+	
+	<script type="text/javascript">
+		WebFontConfig = {
+			google: { families: [ 'Play::latin' ] }
+		};
+		(function() {
+			var wf = document.createElement('script');
+			wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
+			'://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+			wf.type = 'text/javascript';
+			wf.async = 'true';
+			var s = document.getElementsByTagName('script')[0];
+			s.parentNode.insertBefore(wf, s);
+		})(); 
+	</script>
+	
 	<script src="js/phaser.js"></script>	
 	<script src="js/Preloader.js"></script>
 	<script src="js/Menu.js"></script>
