--- a/index.html
+++ b/index.html
@@ -25,8 +25,22 @@
 	<script src="js/Play.js"></script>
 	<script src="js/GameOver.js"></script>
 	<script src="js/Game.js"></script>
+	
+	<style>
+		span {
+			padding-left: 40px;			
+		}
+		
+		#info {
+			text-align: center;
+		}
+	</style>
 </head>
 <body>
 	<div id="content"></div>
+	<div id="info">Controls: <br>
+		<span>Right Arrow - Move Right</span>  <span>Left Arrow - Move Left</span><br>
+		<span>Up Arrow - Jump</span> <span>SPACE - Shoot </span><br>
+		<span>Down Arrow + SPACE - Jump down one level</div>
 </body>
 </html>
