--- a/index.html
+++ b/index.html
@@ -42,5 +42,16 @@
 		<span>Right Arrow - Move Right</span>  <span>Left Arrow - Move Left</span><br>
 		<span>Up Arrow - Jump</span> <span>SPACE - Shoot </span><br>
 		<span>Down Arrow + SPACE - Jump down one level</div>
+		
+		<script>
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+			
+			ga('create', 'UA-64501813-2', 'auto');
+			ga('send', 'pageview');
+		
+		</script>
 </body>
 </html>
